--- a/Battle of Cities Introduction.ipynb
+++ b/Battle of Cities Introduction.ipynb
@@ -40,12 +40,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Library Used\n",
+    "\n",
+    "1. Pandas\n",
+    "2. Geocoder\n",
+    "3. Foursquare\n",
+    "4. KMeans\n",
+    "5. Unicodedata\n",
+    "6. Json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Steps\n",
     "\n",
     "After cleaning the cities data, the next step is to get the coordinates of the locations to be analyzed and then pass these coordinates into foursquare API to get the venue information in these cities.\n",
     "\n",
     "The clustering algorithm will be clustering location/boroughs together based on the type of venues. I'll be working with the top 10 venues in each place, so locations with similar venues will be grouped together."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
